[package]
name = "merkaba369"
version = "3.6.9"
authors = ["Sakari Lehtonen <sakari@psitriangle.net>"]
edition = "2018"

[dependencies]
piston = "0.52.1"
piston_window = "0.103.0"
piston2d-sprite = "0.57.0"
piston-ai_behavior = "0.31.0"
find_folder = "*"
gfx = "0.17.1"
gfx_device_gl = "0.15.0"
cgmath = "0.17.0"
interpolation = "0.2.0"
