[package]
name = "merkaba369"
version = "3.6.9"
authors = ["Sakari Lehtonen <sakari@psitriangle.net>"]
edition = "2018"

[dependencies]
piston = "0.53.1"
piston_window = "0.123.0"
piston2d-sprite = "0.66.0"
piston2d-graphics = "0.42.0"
piston-ai_behavior = "0.33.0"
find_folder = "*"
gfx = "0.18.2"
gfx_device_gl = "0.16.2"
cgmath = "0.18.0"
interpolation = "0.2.0"
